js/src/jit-test/tests/binast/invalid/identifier-declared-name.binjs
BINJS
[
GRAMMAR
]
identity
;
(
AssertedDeclaredName2AssertedScriptGlobalScope
"
BindingIdentifier0LiteralNumericExpression
Script
&
VariableDeclaration
VariableDeclarator
[
STRINGS
]
identity
;
var
a
1
[
TREE
]
identity
;
:
